correction mobile

--- a/style/achievement.css
+++ b/style/achievement.css
@@ -43,6 +43,12 @@ section.achievement > header {
   overflow: hidden;
 }
 
+body.mobile section.achievement > header {
+  flex-direction: column-reverse;
+  display: center;
+  font-size: 200%;
+}
+
 section.achievement > header > h1 {
   font-size: 200%;
   margin-bottom: 1rem;
@@ -52,6 +58,11 @@ section.achievement > header > nav {
   margin-right: 3rem;
 }
 
+body.mobile section.achievement > header > nav {
+  width: 100%;
+  margin-right: 0rem;
+  padding-left: 75%;
+}
 section.achievement > header > nav > button {
   padding: 0.5rem;
   margin: 1rem;
@@ -76,15 +87,52 @@ section.achievement > section.container > div {
   font-size: 150%;
 }
 
+body.mobile section.achievement > section.container > div {
+  flex-direction: column;
+  font-size: 200%;
+}
 section.achievement > section.container > div > article {
   width: 60%;
   padding: 1rem;
+}
+
+body.mobile section.achievement > section.container > div > article {
+  width: 100%;
+  height: auto;
 }
 
 section.achievement > section.container > div > div {
   padding: 1rem;
   padding-top: 2.5rem;
   width: 40vw;
+}
+body.mobile section.achievement > section.container > div > div {
+  display: none;
+}
+
+body.mobile section.achievement > section.container > div > div.mobile.image {
+  display: block;
+  width: 100%;
+  height: 5rem;
+  padding: 1rem;
+}
+
+body.mobile
+  section.achievement
+  > section.container
+  > div
+  > div.mobile.image
+  > a {
+  color: var(--color_font);
+  background: linear-gradient(
+    145deg,
+    var(--color_bk_gradient1),
+    var(--color_bk_gradient2)
+  );
+  border-radius: 0.5rem;
+  margin: 1rem;
+  padding: 1rem;
+  font-size: 110%;
 }
 
 section.achievement > section.container > div > div > img {
