--- a/style/main.css
+++ b/style/main.css
@@ -140,4 +140,23 @@ section > div.next > button {
 
 body.mobile section > div.next > button {
   font-size: 250%;
+  background: linear-gradient(
+    145deg,
+    var(--color_bk_gradient1),
+    var(--color_bk_gradient2)
+  );
+  border-radius: 0.5rem;
+  padding: 1rem;
+  height: auto;
+  width: auto;
+}
+
+body.mobile section > div.next {
+  padding: 1rem;
+  width: 100vw;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  background: transparent;
+  margin-bottom: 2rem;
 }
